force-app/main/default/objects/ssot__FundingAward__dlm/fields/ssot__AwardNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AwardNumber__c</fullName>
    <label>Award Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AwardNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>