force-app/main/default/objects/ssot__FundingAward__dlm/fields/ssot__FundingAward_BudgetId_map_Budget_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__FundingAward_BudgetId_map_Budget_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAward_BudgetId_map_Budget_Id_N_1</label>
    <referenceTo>ssot__Budget__dlm</referenceTo>
    <relationshipLabel>FundingAward_BudgetId_map_Budget_Id_N_1</relationshipLabel>
    <relationshipName>FundingAward_BudgetId_map_Budget_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>