force-app/main/default/objects/ssot__FundingAward__dlm/fields/ssot__FundingAwardStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__FundingAwardStatus__c</fullName>
    <label>Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FundingAwardStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>