force-app/main/default/objects/ssot__FundingAward__dlm/fields/ssot__FundingOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FundingOpportunityId__c</fullName>
    <label>Funding Opportunity</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FundingOpportunityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>