force-app/main/default/objects/ssot__FundingAward__dlm/fields/ssot__rel_1716670492703_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670492703_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAward_ProgramId_map_Program_I_rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>FundingAward_ProgramId_map_Program_I_rel</relationshipLabel>
    <relationshipName>rel_1716670492703_end</relationshipName>
    <type>Lookup</type>
</CustomField>