force-app/main/default/objects/ssot__FundingAward__dlm/fields/ssot__rel_1716670494863_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670494863_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAward_ParentFundingAwardId_ma_rel</label>
    <referenceTo>ssot__FundingAward__dlm</referenceTo>
    <relationshipLabel>FundingAward_ParentFundingAwardId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716670494863_end</relationshipName>
    <type>Lookup</type>
</CustomField>