force-app/main/default/objects/ssot__FundingAward__dlm/fields/ssot__rel_1716670515810_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670515810_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAward_AwardeeId_map_Account_I_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>FundingAward_AwardeeId_map_Account_I_rel</relationshipLabel>
    <relationshipName>rel_1716670515810_end</relationshipName>
    <type>Lookup</type>
</CustomField>