force-app/main/default/objects/ssot__FundingAward__dlm/fields/ssot__TotalAwardAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalAwardAmount__c</fullName>
    <label>Total Award Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalAwardAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>